minor improvements and code quality enhancements & added junit-platform-launcher to dependencies for run tests in midpoint-client